{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 245,
  "lineage": "2c673110-ddd8-6211-e028-9c80bc54a157",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047516c0ad23f98c8",
            "association_id": "eipassoc-0a056698af3f64acf",
            "domain": "vpc",
            "id": "eipalloc-047516c0ad23f98c8",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f58c64ca7f158055",
            "private_dns": "ip-10-1-0-8.ap-south-1.compute.internal",
            "private_ip": "10.1.0.8",
            "public_dns": "ec2-13-233-181-129.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.181.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environmet": "Dev",
              "Name": "Elastic-IP-1",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "Elastic-IP-1",
              "Organization": "cyware"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bafa7b9d90fd968d",
            "association_id": "eipassoc-0fa5acad84c53d775",
            "domain": "vpc",
            "id": "eipalloc-0bafa7b9d90fd968d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e7ebed803a00edf1",
            "private_dns": "ip-10-1-0-79.ap-south-1.compute.internal",
            "private_ip": "10.1.0.79",
            "public_dns": "ec2-3-111-83-255.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.83.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environmet": "Dev",
              "Name": "Elastic-IP-2",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "Elastic-IP-2",
              "Organization": "cyware"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginxserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcb40eb5cb6d6f9e",
            "arn": "arn:aws:ec2:ap-south-1:336054375940:instance/i-0c3f9b59bc54a955a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3f9b59bc54a955a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be94c4ff3f44a269",
            "private_dns": "ip-10-1-0-59.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.59",
            "public_dns": "ec2-13-235-33-182.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.33.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035d8325cb3b2a15d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a6ec695a2be0c99",
            "tags": {
              "Environmet": "Dev",
              "Name": "Nginx-Server",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "Nginx-Server",
              "Organization": "cyware"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083a852a9130c470f"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.cywarevpcpublicsubnets",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcb40eb5cb6d6f9e",
            "arn": "arn:aws:ec2:ap-south-1:336054375940:instance/i-0250731eb3f9048ae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0250731eb3f9048ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02742cdc8b320eb98",
            "private_dns": "ip-10-1-0-102.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.102",
            "public_dns": "ec2-35-154-81-64.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.81.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-001cd75a88eaf7c09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0755d7cf64a3b586b",
            "tags": {
              "Environmet": "Dev",
              "Name": "Nginx-Server",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "Nginx-Server",
              "Organization": "cyware"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083a852a9130c470f"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.cywarevpcpublicsubnets",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dempvpcigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:internet-gateway/igw-0206552d922ba1cc2",
            "id": "igw-0206552d922ba1cc2",
            "owner_id": "336054375940",
            "tags": {
              "Environmet": "Dev",
              "Name": "cywarevpc-igw",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywarevpc-igw",
              "Organization": "cyware"
            },
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "dependencies": [
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:loadbalancer/app/nginx-lb/2318ac86b39ddb41",
            "arn_suffix": "app/nginx-lb/2318ac86b39ddb41",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-lb-699084322.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:loadbalancer/app/nginx-lb/2318ac86b39ddb41",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0942d76c6dc3d51c4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a6ec695a2be0c99"
              },
              {
                "subnet_id": "subnet-0755d7cf64a3b586b"
              }
            ],
            "subnets": [
              "subnet-05a6ec695a2be0c99",
              "subnet-0755d7cf64a3b586b"
            ],
            "tags": {
              "Environmet": "Dev",
              "Name": "cyware-alb",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cyware-alb",
              "Organization": "cyware"
            },
            "vpc_id": "vpc-099b900b891ae7a3c",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:listener/app/nginx-lb/2318ac86b39ddb41/1586d3bd78891cb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:targetgroup/nginx-target-group/9d19c6557c5e61c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:listener/app/nginx-lb/2318ac86b39ddb41/1586d3bd78891cb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:loadbalancer/app/nginx-lb/2318ac86b39ddb41",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cywarevpc",
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.cywarevpcpublicsubnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:listener/app/nginx-lb/2318ac86b39ddb41/1586d3bd78891cb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:targetgroup/nginx-target-group/9d19c6557c5e61c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:listener/app/nginx-lb/2318ac86b39ddb41/1586d3bd78891cb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:loadbalancer/app/nginx-lb/2318ac86b39ddb41",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:targetgroup/nginx-target-group/9d19c6557c5e61c8",
            "arn_suffix": "targetgroup/nginx-target-group/9d19c6557c5e61c8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:targetgroup/nginx-target-group/9d19c6557c5e61c8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "dependencies": [
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:targetgroup/nginx-target-group/9d19c6557c5e61c8-20230515173303160000000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:targetgroup/nginx-target-group/9d19c6557c5e61c8",
            "target_id": "10.1.0.59"
          },
          "dependencies": [
            "aws_instance.nginxserver",
            "aws_lb_target_group.nginx_target_group",
            "aws_security_group.webserver_sg",
            "aws_subnet.cywarevpcpublicsubnets",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:targetgroup/nginx-target-group/9d19c6557c5e61c8-20230515173303243900000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:336054375940:targetgroup/nginx-target-group/9d19c6557c5e61c8",
            "target_id": "10.1.0.102"
          },
          "dependencies": [
            "aws_instance.nginxserver",
            "aws_lb_target_group.nginx_target_group",
            "aws_security_group.webserver_sg",
            "aws_subnet.cywarevpcpublicsubnets",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cywarevpcnatgatways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047516c0ad23f98c8",
            "connectivity_type": "public",
            "id": "nat-0d9b9ffb761569ebb",
            "network_interface_id": "eni-0f58c64ca7f158055",
            "private_ip": "10.1.0.8",
            "public_ip": "13.233.181.129",
            "subnet_id": "subnet-05a6ec695a2be0c99",
            "tags": {
              "Environmet": "Dev",
              "Name": "cywareVPC-NAT-1",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywareVPC-NAT-1",
              "Organization": "cyware"
            }
          },
          "dependencies": [
            "aws_eip.nateips",
            "aws_internet_gateway.dempvpcigw",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bafa7b9d90fd968d",
            "connectivity_type": "public",
            "id": "nat-0e57e42c8a4637b6f",
            "network_interface_id": "eni-0e7ebed803a00edf1",
            "private_ip": "10.1.0.79",
            "public_ip": "3.111.83.255",
            "subnet_id": "subnet-0755d7cf64a3b586b",
            "tags": {
              "Environmet": "Dev",
              "Name": "cywareVPC-NAT-2",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywareVPC-NAT-2",
              "Organization": "cyware"
            }
          },
          "dependencies": [
            "aws_eip.nateips",
            "aws_internet_gateway.dempvpcigw",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cywarevpcprivateroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:route-table/rtb-063b277f463550e31",
            "id": "rtb-063b277f463550e31",
            "owner_id": "336054375940",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9b9ffb761569ebb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environmet": "Dev",
              "Name": "cywarevpc-privatert-1",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywarevpc-privatert-1",
              "Organization": "cyware"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateips",
            "aws_internet_gateway.dempvpcigw",
            "aws_nat_gateway.cywarevpcnatgatways",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:route-table/rtb-06fb654704907900b",
            "id": "rtb-06fb654704907900b",
            "owner_id": "336054375940",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e57e42c8a4637b6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environmet": "Dev",
              "Name": "cywarevpc-privatert-2",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywarevpc-privatert-2",
              "Organization": "cyware"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.cywarevpcnatgatways",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc",
            "aws_eip.nateips",
            "aws_internet_gateway.dempvpcigw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cywarevpcpublicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:route-table/rtb-0784c06e3cab976c2",
            "id": "rtb-0784c06e3cab976c2",
            "owner_id": "336054375940",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0206552d922ba1cc2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environmet": "Dev",
              "Name": "cywarevpc-publicrt",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywarevpc-publicrt",
              "Organization": "cyware"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dempvpcigw",
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cywarevpcnatassocation1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ddd9d5a9e6a51a4",
            "route_table_id": "rtb-063b277f463550e31",
            "subnet_id": "subnet-00a8d65eeb4516923"
          },
          "dependencies": [
            "aws_route_table.cywarevpcprivateroutetable",
            "aws_subnet.cywarevpcprivatesubents",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc",
            "aws_eip.nateips",
            "aws_internet_gateway.dempvpcigw",
            "aws_nat_gateway.cywarevpcnatgatways"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c653207f46a557e8",
            "route_table_id": "rtb-06fb654704907900b",
            "subnet_id": "subnet-02a86f38a89224d43"
          },
          "dependencies": [
            "aws_eip.nateips",
            "aws_internet_gateway.dempvpcigw",
            "aws_nat_gateway.cywarevpcnatgatways",
            "aws_route_table.cywarevpcprivateroutetable",
            "aws_subnet.cywarevpcprivatesubents",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cywarevpcpublicrtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ee04a04e64632f5",
            "route_table_id": "rtb-0784c06e3cab976c2",
            "subnet_id": "subnet-05a6ec695a2be0c99"
          },
          "dependencies": [
            "aws_internet_gateway.dempvpcigw",
            "aws_route_table.cywarevpcpublicrt",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d19bfe41aa1bb20",
            "route_table_id": "rtb-0784c06e3cab976c2",
            "subnet_id": "subnet-0755d7cf64a3b586b"
          },
          "dependencies": [
            "aws_internet_gateway.dempvpcigw",
            "aws_route_table.cywarevpcpublicrt",
            "aws_subnet.cywarevpcpublicsubnets",
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:security-group/sg-0942d76c6dc3d51c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0942d76c6dc3d51c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "336054375940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-alb-sg"
            },
            "tags_all": {
              "Name": "nginx-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:security-group/sg-083a852a9130c470f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083a852a9130c470f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "336054375940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserversg"
            },
            "tags_all": {
              "Name": "webserversg"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cywarevpcprivatesubents",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:subnet/subnet-00a8d65eeb4516923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a8d65eeb4516923",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336054375940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environmet": "Dev",
              "Name": "cywarevpc-privatesubnet-1",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywarevpc-privatesubnet-1",
              "Organization": "cyware"
            },
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "dependencies": [
            "aws_vpc.cywarevpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:subnet/subnet-02a86f38a89224d43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a86f38a89224d43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "336054375940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environmet": "Dev",
              "Name": "cywarevpc-privatesubnet-2",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywarevpc-privatesubnet-2",
              "Organization": "cyware"
            },
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "dependencies": [
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cywarevpcpublicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:subnet/subnet-05a6ec695a2be0c99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a6ec695a2be0c99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "336054375940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environmet": "Dev",
              "Name": "cywarevpc-publicsubnet-1",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywarevpc-publicsubnet-1",
              "Organization": "cyware"
            },
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "dependencies": [
            "aws_vpc.cywarevpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:subnet/subnet-0755d7cf64a3b586b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0755d7cf64a3b586b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "336054375940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environmet": "Dev",
              "Name": "cywarevpc-publicsubnet-2",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "cywarevpc-publicsubnet-2",
              "Organization": "cyware"
            },
            "vpc_id": "vpc-099b900b891ae7a3c"
          },
          "dependencies": [
            "aws_vpc.cywarevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cywarevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:336054375940:vpc/vpc-099b900b891ae7a3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/24",
            "default_network_acl_id": "acl-0126ee3ca705a762b",
            "default_route_table_id": "rtb-0a2d301f60da6c789",
            "default_security_group_id": "sg-01f8f770630de74c5",
            "dhcp_options_id": "dopt-02ed24d0849d50ced",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099b900b891ae7a3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2d301f60da6c789",
            "owner_id": "336054375940",
            "tags": {
              "Environmet": "Dev",
              "Name": "CywareVPC",
              "Organization": "cyware"
            },
            "tags_all": {
              "Environmet": "Dev",
              "Name": "CywareVPC",
              "Organization": "cyware"
            }
          }
        }
      ]
    }
  ]
}